--- a/success-page-additional-tags.html
+++ b/success-page-additional-tags.html
@@ -39,24 +39,19 @@ var google_remarketing_only = false;
 <script type="text/javascript">
 /* <![CDATA[ */
 var google_conversion_id = 964245031;
-var google_custom_params = window.google_tag_params;
-var google_remarketing_only = true;
+var google_conversion_language = "en";
+var google_conversion_format = "3";
+var google_conversion_color = "ffffff";
+var google_conversion_label = "9_oSCOnD1QkQp-zkywM";
+var google_remarketing_only = false;
 /* ]]> */
 </script>
 <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
 </script>
 <noscript>
 <div style="display:inline;">
-<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/964245031/?value=0&amp;guid=ON&amp;script=0"/>
+<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/964245031/?label=9_oSCOnD1QkQp-zkywM&amp;guid=ON&amp;script=0"/>
 </div>
 </noscript>
-
-
-
-  s.onload = initMunchkin;
-  document.getElementsByTagName('head')[0].appendChild(s);
-})();
-</script>
-
 
 
